--- a/README.me
+++ b/README.me
@@ -1,1 +1,6 @@
 # Generative Web
+
+Add your Open API key Here
+https://github.com/JeremyNixon/generative-web/blob/main/content.js#L43
+
+`Bearer YOUR_OPENAI_API_KEY`
